name conventions -> naming conventions
Signed-off-by: Sven Efftinge <sven.efftinge@itemis.de>

--- a/plugins/org.eclipse.xtext.xtext.ui/src/org/eclipse/xtext/xtext/ui/editor/validation/messages.properties
+++ b/plugins/org.eclipse.xtext.xtext.ui/src/org/eclipse/xtext/xtext/ui/editor/validation/messages.properties
@@ -5,9 +5,9 @@ XtextValidatorConfigurationBlock_11=Rebuilding
 XtextValidatorConfigurationBlock_12=Validation Settings Changed
 XtextValidatorConfigurationBlock_13=The grammar validation settings have changed. A full rebuild is required for changes to take effect. Do the full build now?
 XtextValidatorConfigurationBlock_14=The grammar validation settings have changed. A rebuild of the project is required for changes to take effect. Build the project now?
-XtextValidatorConfigurationBlock_2=Terminal rule name conventions:
+XtextValidatorConfigurationBlock_2=Terminal rule naming conventions:
 XtextValidatorConfigurationBlock_3=Duplicate enumeration literal:
-XtextValidatorConfigurationBlock_4=Metamodel name conventions:
+XtextValidatorConfigurationBlock_4=Package naming conventions:
 XtextValidatorConfigurationBlock_5=Package not imported through URI:
 XtextValidatorConfigurationBlock_6=Package not on classpath:
 XtextValidatorConfigurationBlock_7=Use of bidirectional references:
